# PGen

./: .env  .gitignore  Cargo.toml
migrations/2021-12-29-132755_password/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
src/cmd/: mod.rs
